cabal-version: 2.4
name:          polysemy-req
version:       0.1.0.0
license:       BSD-3-Clause
maintainer:    themorrowm@gmail.com
author:        Morrow
homepage:      https://github.com/morrowm/polysemy-req
bug-reports:   https://github.com/morrowm/polysemy-req/issues
synopsis:      Polysemy effect for req
description:
  A basic effect for making req requests inside a polysemy application. 

category:      Network, Web
build-type:    Simple

library
  exposed-modules:  Polysemy.Req
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:
    , base         >=4.14    && <5
    , http-client  ^>=0.7.8
    , polysemy     ^>=1.5.0.0
    , req          ^>=3.9.1
